# AI-ML-Learning-Lab

./: .gitignore  GUIA_DO_PROJETO.md  PRD.md  PROJECT_GUIDE.md  README.md  app.py  main.py  pyproject.toml  requirements.txt  vite_help.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.jsx  index.css  translations.js
frontend/src/components/: DataTable.jsx  ExplanationBox.jsx  Layout.jsx  MetricCard.jsx  Simulator.jsx
frontend/src/pages/: Classification.jsx  Comparison.jsx  FAQ.jsx  Home.jsx  LearningMode.jsx  Regression.jsx
modules/: classification.py  evaluation.py  explanation.py  regression.py
services/: data_loader.py  model_trainer.py
utils/: i18n.py  metrics_helper.py
